# rtic-examples

rtic_v1/stm32f3_blinky/: Cargo.toml  Embed.toml
rtic_v1/stm32f3_blinky/src/: main.rs
rtic_v1/stm32f4_blinky/: Cargo.toml  Embed.toml  cmds.txt
rtic_v1/stm32f4_blinky/.cargo/: config
rtic_v2/stm32f4_blinky/: Cargo.toml  memory.x
rtic_v2/stm32f4_blinky/.cargo/: config
rtic_v2/stm32f4_blinky/src/: main.rs
