[package]
authors = ["Simsys <winfried.simon@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f4-blinky"
version = "0.1.0"

[dependencies]
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.*", features = ["cortex-m"] }
rtic-monotonics = { version = "1.0", features = [ "cortex-m-systick" ]}
rtic = { version = "2.0", features = [ "thumbv7-backend" ] }
rtic-sync = "1.0.1"
critical-section = "1"

[dependencies.stm32f4xx-hal]
features = ["stm32f446", "rtic"]
version = "0.16.*"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f4-blinky"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"   # optimize for size
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
